--- a/data_normalizer/Gemfile
+++ b/data_normalizer/Gemfile
@@ -15,8 +15,9 @@ gem 'puma'
 gem 'slim-rails'
 
 group :development do
-  gem 'better_errors'
+  gem 'awesome_print'
   gem 'binding_of_caller', :platforms=>[:mri_19, :mri_20, :rbx]
+  gem 'better_errors'  
   gem 'foreman'
   gem 'guard-bundler'
   gem 'guard-rails'
